--- a/server/package.json
+++ b/server/package.json
@@ -6,7 +6,18 @@
   "scripts": {
     "start": "node index.js",
     "dev": "nodemon index.js",
-    "setup-db": "node scripts/create_db.js"
+    "setup-db": "node scripts/create_db.js",
+    "test": "jest"
+  },
+  "jest": {
+    "testEnvironment": "node",
+    "testMatch": [
+      "**/test/**/*.test.js"
+    ],
+    "collectCoverageFrom": [
+      "controllers/**/*.js",
+      "routes/**/*.js"
+    ]
   },
   "keywords": [
     "nodejs",
@@ -18,19 +29,21 @@
   "license": "MIT",
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "clone": "^2.1.0",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
-    "csurf": "^1.11.0",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-rate-limit": "^8.2.1",
     "jsonwebtoken": "^9.0.0",
     "node-cache": "^5.1.2",
-    "pg": "^8.9.0",
+    "pg": "^8.18.0",
     "pg-hstore": "^2.3.4",
-    "sequelize": "^6.28.0"
+    "sequelize": "^6.37.7"
   },
   "devDependencies": {
-    "nodemon": "^2.0.20"
+    "jest": "^30.2.0",
+    "nodemon": "^3.1.11",
+    "supertest": "^7.2.2"
   }
 }
