--- a/deployment/nginx.conf
+++ b/deployment/nginx.conf
@@ -1,6 +1,6 @@
 server {
     listen 80;
-    server_name medsester.ru www.medsester.ru;
+    server_name medsester.ru www.medsester.ru 130.49.149.185;
 
     location / {
         root /opt/med-qa-portal/server/public;
